--- a/output.css
+++ b/output.css
@@ -687,6 +687,18 @@ video {
   margin-top: 4rem;
 }
 
+.mr-auto{
+  margin-right: auto;
+}
+
+.mr-8{
+  margin-right: 2rem;
+}
+
+.mr-14{
+  margin-right: 3.5rem;
+}
+
 .inline-block{
   display: inline-block;
 }
@@ -703,12 +715,33 @@ video {
   display: none;
 }
 
+.size-3{
+  width: 0.75rem;
+  height: 0.75rem;
+}
+
 .h-12{
   height: 3rem;
 }
 
 .h-16{
   height: 4rem;
+}
+
+.h-5{
+  height: 1.25rem;
+}
+
+.h-10{
+  height: 2.5rem;
+}
+
+.h-14{
+  height: 3.5rem;
+}
+
+.h-1{
+  height: 0.25rem;
 }
 
 .min-h-\[80vh\]{
@@ -733,10 +766,6 @@ video {
 
 .max-w-36{
   max-width: 9rem;
-}
-
-.grow{
-  flex-grow: 1;
 }
 
 .-translate-x-1\/2{
@@ -767,6 +796,14 @@ video {
 
 .items-center{
   align-items: center;
+}
+
+.justify-start{
+  justify-content: flex-start;
+}
+
+.justify-end{
+  justify-content: flex-end;
 }
 
 .justify-center{
@@ -810,19 +847,6 @@ video {
   row-gap: 9rem;
 }
 
-.gap-y-10{
-  row-gap: 2.5rem;
-}
-
-.gap-x-1{
-  -moz-column-gap: 0.25rem;
-       column-gap: 0.25rem;
-}
-
-.gap-y-1{
-  row-gap: 0.25rem;
-}
-
 .space-x-2 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -857,12 +881,16 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded-sm{
-  border-radius: 0.125rem;
-}
-
 .border{
   border-width: 1px;
+}
+
+.border-2{
+  border-width: 2px;
+}
+
+.border-4{
+  border-width: 4px;
 }
 
 .border-b{
@@ -882,6 +910,11 @@ video {
 .border-yellow-400{
   --tw-border-opacity: 1;
   border-color: rgb(250 204 21 / var(--tw-border-opacity));
+}
+
+.border-white{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-main-color{
@@ -929,9 +962,8 @@ video {
   padding: 1.5rem;
 }
 
-.px-10{
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.p-14{
+  padding: 3.5rem;
 }
 
 .px-2{
@@ -942,11 +974,6 @@ video {
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-}
-
-.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
 }
 
 .py-1{
@@ -964,13 +991,12 @@ video {
   padding-bottom: 5rem;
 }
 
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .pb-10{
   padding-bottom: 2.5rem;
+}
+
+.pt-10{
+  padding-top: 2.5rem;
 }
 
 .pt-20{
@@ -981,20 +1007,20 @@ video {
   padding-top: 6rem;
 }
 
-.pt-5{
-  padding-top: 1.25rem;
+.pl-14{
+  padding-left: 3.5rem;
 }
 
-.pt-10{
-  padding-top: 2.5rem;
+.pl-52{
+  padding-left: 13rem;
 }
 
-.pt-6{
-  padding-top: 1.5rem;
+.pl-2{
+  padding-left: 0.5rem;
 }
 
-.pt-8{
-  padding-top: 2rem;
+.pl-20{
+  padding-left: 5rem;
 }
 
 .text-center{
@@ -1007,6 +1033,11 @@ video {
 
 .font-TitanOne{
   font-family: Titan One, sans-serif;
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl{
@@ -1044,22 +1075,12 @@ video {
   line-height: 1rem;
 }
 
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .font-bold{
   font-weight: 700;
 }
 
 .italic{
   font-style: italic;
-}
-
-.text-gray-400{
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .text-main-color{
@@ -1077,11 +1098,6 @@ video {
   color: rgb(203 213 225 / var(--tw-text-opacity));
 }
 
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-yellow-400{
   --tw-text-opacity: 1;
   color: rgb(250 204 21 / var(--tw-text-opacity));
@@ -1095,11 +1111,6 @@ video {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.outline-none{
-  outline: 2px solid transparent;
-  outline-offset: 2px;
 }
 
 .backdrop-blur-sm{
@@ -1286,6 +1297,11 @@ h3{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:border-yellow-400:hover{
+  --tw-border-opacity: 1;
+  border-color: rgb(250 204 21 / var(--tw-border-opacity));
+}
+
 .hover\:bg-white:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1299,10 +1315,6 @@ h3{
 .hover\:text-yellow-400:hover{
   --tw-text-opacity: 1;
   color: rgb(250 204 21 / var(--tw-text-opacity));
-}
-
-.hover\:opacity-80:hover{
-  opacity: 0.8;
 }
 
 .hover\:shadow-2xl:hover{
@@ -1352,10 +1364,6 @@ h3{
 
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .md\:flex-row{
-    flex-direction: row;
   }
 
   .md\:gap-4{
@@ -1437,20 +1445,12 @@ h3{
     background-color: transparent;
   }
 
-  .lg\:pt-10{
-    padding-top: 2.5rem;
-  }
-
-  .lg\:pt-5{
-    padding-top: 1.25rem;
+  .lg\:pt-1{
+    padding-top: 0.25rem;
   }
 
   .lg\:pt-3{
     padding-top: 0.75rem;
-  }
-
-  .lg\:pt-1{
-    padding-top: 0.25rem;
   }
 }
 
@@ -1467,10 +1467,6 @@ h3{
     --tw-space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
-  }
-
-  .xl\:pt-10{
-    padding-top: 2.5rem;
   }
 
   .xl\:pt-3{
